# Simulators

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
simulator/: dropper.py  main.py
src/: dropper.py  main.py
